[gd_scene load_steps=2 format=3 uid="uid://br1yp8a63lru7"]

[ext_resource type="Script" path="res://job_turner/main_job_turner_ekskurs_1.gd" id="1_vv81e"]

[node name="job_turner_ekskurs_1" type="Node3D"]
script = ExtResource("1_vv81e")

[node name="Panel" type="Panel" parent="."]
offset_left = 821.0
offset_top = 13.0
offset_right = 1139.0
offset_bottom = 635.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 10.0
offset_right = 307.0
offset_bottom = 411.0
text = "Добро пожаловать! Этот курс познакомит тебя с самыми основами работы на токарном станке. 

Если тебе надоест - ты можешь в любой момент выйти и вернуться, когда захочешь."
autowrap_mode = 2
justification_flags = 169
clip_text = true

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 19.0
offset_top = 430.0
offset_right = 299.0
offset_bottom = 467.0
text = "Вариант 1"

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 19.0
offset_top = 475.0
offset_right = 299.0
offset_bottom = 512.0
text = "Вариант 2"

[node name="Button4" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 19.0
offset_top = 518.0
offset_right = 299.0
offset_bottom = 555.0
text = "Вариант 3"

[node name="Button3" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 201.0
offset_top = 567.0
offset_right = 298.0
offset_bottom = 604.0
text = "Выход"

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 28.0
offset_top = 575.0
offset_right = 188.0
offset_bottom = 601.0
text = "1/1"
horizontal_alignment = 1
autowrap_mode = 2
justification_flags = 169
clip_text = true
